@@ -5,6 +5,7 @@ File Name: CHANGES
 - Add block preconditioners for block_dCSRmat matrices.
 - Add clang to default compiler searching list.
 - Fix a typo in coarsening_rs.c.
+- Add pairwise aggregation for AMG setup phase.
 
 04/02/2014 FASP 1.4.8:
 - Add ini/ua.dat and ini/sa.dat parameters.
